syntax = "proto3";

package yim.comet;

option go_package = "github.com/xyhubl/yim/api/logic;logic";

message ConnectReq {
  string server = 1;
  string cookie = 2;
  bytes  token = 3;
}

message ConnectReply {
  int64 mid = 1;
  string key = 2;
  string roomID = 3;
  repeated int32 accepts = 4;
  int64 heartbeat = 5;
}

message DisconnectReq {
  int64 mid = 1;
  string key = 2;
  string server = 3;
}

message DisconnectReply {
  bool has = 1;
}

message HeartbeatReq {
  int64 mid = 1;
  string key = 2;
  string server = 3;
}

enum Type {
 PUSH = 0;
 ROOM = 1;
 BROADCAST = 2;
}

message PushMsg {
  Type type = 1;
  int32 operation = 2;
  int32 speed = 3;
  string server = 4;
  string room = 5;
  repeated string keys = 6;
  bytes msg = 7;
}

message HeartbeatReply {
}

service Logic {
  rpc Connect(ConnectReq) returns (ConnectReply);
  rpc Disconnect(DisconnectReq) returns (DisconnectReply);
  rpc Heartbeat(HeartbeatReq) returns (HeartbeatReply);
}
